 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.9.3 - Unreleased

BUG FIXES

PIG-2493: UNION causes casting issues (vivekp via daijy)

Release 0.9.2

IMPROVEMENTS

PIG-2471: Pig Requirements Hadoop (chandec via daijy)

PIG-2431: Upgrade bundled hadoop version to 1.0.0 (daijy)

PIG-2468: Speed up TestBuiltin (dvryaboy)

PIG-2467: Speed up TestCommit (dvryaboy)

PIG-2460: Use guava 11 instead of r06 (dvryaboy)

PIG-2447: piggybank: get hive dependency from maven (thw via azaroth)

PIG-2347: Fix Pig Unit tests for hadoop 23 (daijy)

PIG-2410: Piggybank does not compile in 23 (daijy)

PIG-2125: Make Pig work with hadoop .NEXT (daijy)

PIG-2128: Generating the jar file takes a lot of time and is unnecessary when running Pig local mode (julienledem)

BUG FIXES

PIG-2480: TestUDFContext.testUDFContext failing against hadoop 23 (daijy)

PIG-2477: TestBuiltin testLFText/testSFPig failing against 23 due to invalid test setup -- InvalidInputException (phunt via daijy)

PIG-2119: DuplicateForEachColumnRewrite makes assumptions about the position of LOGGenerate in the plan (daijy)

PIG-2428: In pig9, can't have limit(order by) without getting a null error (jcoveney via daijy)

PIG-2462: getWrappedSplit is incorrectly returning the first split instead of the current split. (arov via daijy)

PIG-2473: Fix eclipse files for pig 9 (daijy)

PIG-2472: piggybank unit tests write directly to /tmp (thw via daijy)

PIG-2413: e2e test should support testing against two cluster (daijy)

PIG-2342: Pig tutorial documentation needs to update about building tutorial (daijy)

PIG-2172: Fix test failure for ant 1.8.x (daijy)

PIG-2120: UDFContext.getClientSystemProps() does not respect pig.properties (dvryaboy)
