@@ -24,6 +24,8 @@ BUG FIXES
 
 PIG-2493: UNION causes casting issues (vivekp via daijy)
 
+PIG-2497: Order of execution of fs, store and sh commands in Pig is not maintained (daijy)
+
 Release 0.9.2
 
 IMPROVEMENTS
